--- a/Desafios/Módulo 2/dsf012 (cordel-moderno)/styles/style.css
+++ b/Desafios/Módulo 2/dsf012 (cordel-moderno)/styles/style.css
@@ -7,3 +7,67 @@
     text-decoration: none;
     list-style: none;
 }
+
+html, body {
+    background-color: darkgray;
+
+    min-width: 100vh;
+}
+
+header {
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+}
+
+header > h1 {
+    padding-top: 50px;
+
+    font-variant: small-caps; /*ou - text-transform: uppercase;*/  
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+a {
+    color: #fff;
+    font-weight: bolder;
+}
+
+a:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 30px;
+
+    line-height: 2em;
+}
+
+.normal {
+    background-color: #fff;
+    color: #000;
+}
+
+.imagem {
+    background-color: #202020;
+    color: #fff;
+}
+
+.imagem > p {
+    background-color: rgba(0, 0, 0, 0.212);
+
+    width: 400px;
+}
+
+footer {
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+
+    padding: 10px;
+}
