--- a/Desafios/Módulo 2/dsf012 (cordel-moderno)/styles/style.css
+++ b/Desafios/Módulo 2/dsf012 (cordel-moderno)/styles/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Passion One", sans-serif;
+    --fonte3: "Sriracha", cursive;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -10,6 +20,8 @@
 
 html, body {
     background-color: darkgray;
+
+    font-family: var(--fonte1);
 
     min-width: 100vh;
 }
@@ -23,7 +35,9 @@ header {
 header > h1 {
     padding-top: 50px;
 
+    font-family: var(--fonte2);
     font-variant: small-caps; /*ou - text-transform: uppercase;*/  
+    font-size: 7vw;
 }
 
 header > p {
@@ -41,6 +55,9 @@ a:hover {
 }
 
 section {
+    font-family: var(--fonte3);
+    font-size: 2vw;
+
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
@@ -61,7 +78,9 @@ section {
 .imagem > p {
     background-color: rgba(0, 0, 0, 0.212);
 
-    width: 400px;
+    display: inline-block;
+
+    padding: 5px;
 }
 
 footer {
