--- a/Desafios/Módulo 2/dsf012 (cordel-moderno)/styles/style.css
+++ b/Desafios/Módulo 2/dsf012 (cordel-moderno)/styles/style.css
@@ -65,6 +65,10 @@ section {
     line-height: 2em;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 .normal {
     background-color: #fff;
     color: #000;
@@ -72,15 +76,30 @@ section {
 
 .imagem {
     background-color: #202020;
+    background-size: cover;
+    background-attachment: fixed;
     color: #fff;
+
+    box-shadow: inset 6px 6px 13px 0 rgba(0, 0, 0, 0.493);
 }
 
 .imagem > p {
-    background-color: rgba(0, 0, 0, 0.212);
+    background-color: rgba(0, 0, 0, 0.5);
 
     display: inline-block;
 
     padding: 5px;
+
+    text-shadow: 1px 1px 0 #000;
+}
+
+#img01 {
+    background-image: url(/imagens/background001.jpg);
+    background-position: right center;
+}
+
+#img02 {
+    background-image: url(/imagens/background002.jpg);
 }
 
 footer {
